@@ -1,14 +1,22 @@
-# Use a specific version of OpenJDK (ensure it's available and correct)
+# Use a build stage to compile the project
+FROM gradle:jdk21 AS build
+
+WORKDIR /app
+COPY . .
+
+# Build the application
+RUN ./gradlew clean build -x test
+
+# Use a lightweight Java image to run the application
 FROM openjdk:22-jdk-slim
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the JAR file from the build directory to the working directory inside the container
-COPY ./build/libs/Backend-0.0.1-SNAPSHOT.jar /app/Backend.jar
+# Copy the JAR file from the build stage
+COPY --from=build /app/build/libs/Backend-0.0.1-SNAPSHOT.jar /app/Backend.jar
 
-# Expose port 8080 to the outside world
+# Expose port 8080
 EXPOSE 8080
 
 # Run the application
-ENTRYPOINT ["java", "--enable-preview", "-jar", "Backend.jar"]
+CMD ["java", "-jar", "Backend.jar"]
